mdapi/Custom/objects/Property_Walk__c.object
<CustomObject>
    <fields>
        <fullName>BT2_Doors_Knobs_Locks__c</fullName>
        <label>Doors/Knobs/Locks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Exhaust_Fans__c</fullName>
        <label>Exhaust Fans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Flooring_Baseboards__c</fullName>
        <label>Flooring/Baseboards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Light_Fixtures__c</fullName>
        <label>Light Fixtures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Plumbing_Drains__c</fullName>
        <label>Plumbing/Drains</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Shower_Door_Rod__c</fullName>
        <label>Shower Door/Rod</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Sink_Faucets__c</fullName>
        <label>Sink/Faucets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Switches_Outlets__c</fullName>
        <label>Switches/Outlets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Toilet_Paper_Holder__c</fullName>
        <label>Toilet Paper Holder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Toilet__c</fullName>
        <label>Toilet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Towel_Rack_s__c</fullName>
        <label>Towel Rack (s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Tub_Shower__c</fullName>
        <label>Tub/Shower</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Walls_Ceilings__c</fullName>
        <label>Walls/Ceilings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Window_Coverings__c</fullName>
        <label>Window Coverings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT2_Windows_Locks_Screens__c</fullName>
        <label>Windows/Locks/Screens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Cabinets_Counter__c</fullName>
        <label>Cabinets/Counter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Door_Knobs_Locks__c</fullName>
        <label>Doors/Knobs/Locks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Doors_Knobs_Locks__c</fullName>
        <label>Doors/Knobs/Locks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Exhaust_Fans__c</fullName>
        <label>Exhaust Fans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Flooring_Baseboards__c</fullName>
        <label>Flooring/Baseboards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Light_Fixtures__c</fullName>
        <label>Light Fixtures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Plumbing_Drains__c</fullName>
        <label>Plumbing/Drains</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Shower_Door_Rod__c</fullName>
        <label>Shower Door/Rod</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Sink_Faucets__c</fullName>
        <label>Sink/Faucets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Switches_Outlets__c</fullName>
        <label>Switches/Outlets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Toilet_Paper_Holder__c</fullName>
        <label>Toilet Paper Holder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Toilet__c</fullName>
        <label>Toilet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Towel_Rack_s__c</fullName>
        <label>Towel Rack (s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Tub_Shower__c</fullName>
        <label>Tub/Shower</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Walls_Ceilings__c</fullName>
        <label>Walls/Ceilings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Window_Coverings__c</fullName>
        <label>Window Coverings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BT3_Windows_Locks_Screens__c</fullName>
        <label>Windows/Locks/Screens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BY_Light_Fixtures__c</fullName>
        <label>Light Fixtures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_Side_Yard__c</fullName>
        <label>Back/Side Yard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bath_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Bathroom that requires repair or attention.</inlineHelpText>
        <label>Bath Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bedroom_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Bedroom that requires repair or attention.</inlineHelpText>
        <label>Bedroom Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Building_Exterior__c</fullName>
        <label>Building Exterior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Neede</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cabinets_Counter__c</fullName>
        <label>Cabinets/Counter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cabinets_Counters__c</fullName>
        <label>Cabinets/Counters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closets_Doors_Tracks__c</fullName>
        <label>Closets/Doors/Tracks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DR_Flooring_Baseboards__c</fullName>
        <label>Flooring/Baseboards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DR_Light_Fixtures_Fans__c</fullName>
        <label>Light Fixtures/Fans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DR_Switches_Outlets__c</fullName>
        <label>Switches/Outlets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DR_Walls_Ceiling__c</fullName>
        <label>Walls/Ceilings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DR_Window_Coverings__c</fullName>
        <label>Window Coverings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DR_Windows_Locks_Screens__c</fullName>
        <label>Windows/Locks/Screens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dinning_Room_Comments__c</fullName>
        <inlineHelpText>Please provide details regarding any item in the Dinning Room that requires repair or attention.</inlineHelpText>
        <label>Dinning Room Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dishwasher__c</fullName>
        <label>Dishwasher</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doors_Knobs_Locks__c</fullName>
        <label>Doors/Knobs/Locks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Repair Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>